--- a/src/MOTCHeader.css
+++ b/src/MOTCHeader.css
@@ -39,17 +39,6 @@
   font-weight: 300;
 }
 
-#MOTCHeader > .left-block > .app-block-icon {
-  margin-left: 12px;
-  font-size: 24px;
-  color: #aaa;
-  cursor: pointer;
-}
-
-#MOTCHeader > .left-block > .app-block-icon:hover {
-  color: #ececec;
-}
-
 #MOTCHeader > .action {
   cursor: pointer;
   color: #ececec;
@@ -64,63 +53,46 @@
   background-color: #000;
 }
 
-#MOTCHeader-mobile > .logo {
+#MOTCHeader-mobile .logo {
   text-align: center;
   padding-top: 12px;
 }
 
-#MOTCHeader-mobile > .logo > img {
+#MOTCHeader-mobile .logo img {
   max-width: 150px;
   width: 100%;
 }
 
-#MOTCHeader-mobile > .menu-bar {
+#MOTCHeader-mobile .menu-bar {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#MOTCHeader-mobile > .menu-bar > i {
+#MOTCHeader-mobile .menu-bar i {
   color: #f0f6fc;
   font-size: 1.6rem;
   cursor: pointer;
   line-height: normal;
 }
 
-#MOTCHeader-mobile > .menu-bar > i:hover {
+#MOTCHeader-mobile .menu-bar i:hover {
   color: #fff;
 }
 
-#MOTCHeader-mobile > .title {
+#MOTCHeader-mobile .title {
   color: #f0f6fc;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
 }
 
-#MOTCHeader-mobile > .title > .tw {
+#MOTCHeader-mobile .title .tw {
   font-size: 20px;
 }
 
-#MOTCHeader-mobile > .title > .tw {
+#MOTCHeader-mobile .title .en {
   font-size: 14px;
   font-weight: 300;
-}
-
-#app-block {
-  text-align: center;
-}
-
-#app-block > .app-icon {
-  max-width: 80px;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.2);
-}
-
-#logo-text {
-  cursor: pointer;
 }
